--- a/index.html
+++ b/index.html
@@ -22,23 +22,44 @@
     </header>
     <main class="grid">
         <section id="entrada">
-            <h1>MASAJES</h1>
+            <h1 class="titulo">MASOTERAPIA</h1>
             <div>
-                <p>El masaje es un tratamiento que tiene miles de años. Si necesitas o te apetece un masaje, puedes elegir entre 80 tipos de masajes con una amplia variedad de presiones, movimientos y técnicas. Aunque no los encontrarás todos en la misma clínica estética. Un masaje implica presionar o manipular los músculos y otros tejidos blandos con las manos y los dedos. A veces, incluso con los antebrazos, codos o pies.</p>
+                <p class="parrafo">La masoterapia es un conjunto de técnicas manuales que se emplean con el objetivo de rehabilitar lesiones corporales sobre los tejidos blandos: la piel, tejido muscular y conectivo. Es una técnica con invasiva y a veces complementaria de otros tratamientos; su función es favorecer que los órganos y la musculatura se oxigenen, el cuerpo se relaje, y que la circulación sanguínea y linfática se incremente, favoreciendo además de la circulación, la liberación de endorfinas y la eliminación de toxinas, el bienestar orgánico general y disminuyendo el estrés.</p>
             </div>
             <div>
                 <img src="imagenes/masajemuger.jpg" alt="masajemuj">
             </div>
         </section>
-        <section id="tiposmasajes" >
-            <h2>Nuestros Servicios</h2>
-            <h3 class="letra maquetado">Drenaje linfático</h3>
-            <h4 class="letra maquetado">El sistema linfático ayuda a eliminar los desechos de tu cuerpo. Un sistema linfático activo y saludable utiliza los movimientos naturales del tejido muscular para eliminar todo aquello que le sobra a tu cuerpo. Pero no siempre, y sobre todo cuando vamos cumpliendo años, es tan activo y por lo tanto tan efectivo.</h4>
-            <h3 class="letra maquetado">Masaje deportivo</h3>
-            <h4 class="letra maquetado">Desarrollado para ayudar con los sistemas musculares utilizados para un deporte en particular.
-            <h3 class="letra maquetado">Masaje deportivo</h3>
-            <h4 class="letra maquetado">Desarrollado para ayudar con los sistemas musculares utilizados para un deporte en particular.     
-            </section>
+        <section id="cuerpo">
+            <h2 class="subtitulo">QUE TENER EN CUENTA</h2>
+            <h3 class="letra subtitulo2">CONTRAINDICACIONES PARA EL MASAJE</h3>
+
+            <div class="parrafo">
+                <li>Contraindicaciones relativas: aquellas que van sujetas a la situación del paciente en particular, ya que algunos métodos de masaje pueden ser más o menos perjudiciales dependiendo la circunstancia.</li>
+                <li>Contraindicaciones totales: técnicas de masajes que se suponen nocivas debido a la salud del paciente.</li>
+            </div>
+
+            <h3 class="subtitulo2">CONTRAINDICACIONES MÁS IMPORTANTES: CUANDO NO HACER MASAJES</h3>
+
+            <div class="parrafo">
+                <li>Intervención quirúrgica de menos de 6 meses</li>
+                <li>Enfermedades de la piel: dermatitis, úlceras por decúbito, hongos.</li>
+                <li>Heridas cutáneas causadas por lupus.</li>
+                <li>Enfermedades vasculares inflamatorias: flebitis, debilidad vascular, retenciones circulatorias graves.</li>
+                <li>Trombosis y embolia arterial, venas varicosas</li>
+                <li>Cardipoatias en general: taquicardias e hipertension grave</li>
+                <li>Inflamaciones agudas o debilidad/sensibilidad en la piel: dolor, enrojecimiento, inflamacion</li>
+                <li>Enfermedades agudas o en fase evolutiva: estados febriles, náuseas, úlcera gástrica.</li>
+                <li>Hematomas, hemorragias recientes, heridas sin cicatrizar, esguinces agudos, contusiones.</li>
+                <li>Fibrosis y enfermedades musculares degenerativas.</li>
+                <li>Enfermedades reumáticas agudas.</li>
+                <li>Enfermedades infecciosas.</li>
+                <li>Enfermedades tumorales.</li>
+                <li>Rotura o desgarro de músculos, tendones y ligamentos.</li>
+                <li>Traumatismos recientes y tratamientos quirúrgicos.</li>
+                <li>Enfermedades del sistema nervioso y compresión nerviosa.</li>
+            </div>
+        </section>
     </main>
     <footer>
         <a href="index.html" >
