--- a/masajes.html
+++ b/masajes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Masajes</title>
     <link rel="stylesheet" href="estilos.css">
     <link rel="stylesheet" href="css/bootstrap.css">
 </head>
@@ -30,15 +30,15 @@
             </div>
           </nav>
     </header>
-    <main>
+    <main id="cuerpo" >
         <div class="container">
             <div class="row">
                 <div class="col-4 mt-4 mb-4">
                     <div class="card" >
                         <img class="card-img-center" src="imagenes/masajemuger.jpg" alt="Imagen">
                         <div class="card-body">
-                            <h5 class="card-title">Masaje Sueco</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta mollitia sequi delectus reiciendis tempora. Eius.</p>
+                            <h5 class="card-title">Masaje Relajante</h5>
+                            <p class="card-text">Se realiza cuando la persona presenta estrés físico y emocional. Busca proporcionar un bienestar general al organismo.</p>
                             <a href="turnos.html" class="btn btn-outline-dark">Pedir Turno</a>
                         </div>
                     </div>
@@ -47,8 +47,8 @@
                     <div class="card" >
                         <img class="card-img-center" src="imagenes/masajemuger.jpg" alt="Imagen">
                         <div class="card-body">
-                            <h5 class="card-title">Masaje Sueco</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta mollitia sequi delectus reiciendis tempora. Eius.</p>
+                            <h5 class="card-title">Masaje Descontracurante</h5>
+                            <p class="card-text">se utiliza para relajar la musculatura y disolver contracturas que se producen por estrés, malas posturas, falta de descanso o vida sedentaria.</p>
                             <a href="turnos.html" class="btn btn-outline-dark">Pedir Turno</a>
                         </div>
                     </div>
@@ -57,8 +57,8 @@
                     <div class="card" >
                         <img class="card-img-center" src="imagenes/masajemuger.jpg" alt="Imagen">
                         <div class="card-body">
-                            <h5 class="card-title">Masaje Sueco</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta mollitia sequi delectus reiciendis tempora. Eius.</p>
+                            <h5 class="card-title">Drenaje Linfático</h5>
+                            <p class="card-text">Consiste en aplicar masajes suaves sobre diferentes partes del cuerpo con el objetivo de mejorar la circulación de la linfa y el sistema linfático.</p>
                             <a href="turnos.html" class="btn btn-outline-dark">Pedir Turno</a>
                         </div>
                     </div>
@@ -67,8 +67,8 @@
                     <div class="card" >
                         <img class="card-img-center" src="imagenes/masajemuger.jpg" alt="Imagen">
                         <div class="card-body">
-                            <h5 class="card-title">Masaje Sueco</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta mollitia sequi delectus reiciendis tempora. Eius.</p>
+                            <h5 class="card-title">Masaje Deportivo</h5>
+                            <p class="card-text">Utilizado pre y post entrenamiento, su objetivo es mejorar el rendimiento deportivo, cuidar el cuerpo y acelerar su recuperación evitar las lesiones.</p>
                             <a href="turnos.html" class="btn btn-outline-dark">Pedir Turno</a>
                         </div>
                     </div>
@@ -77,8 +77,8 @@
                     <div class="card" >
                         <img class="card-img-center" src="imagenes/masajemuger.jpg" alt="Imagen">
                         <div class="card-body">
-                            <h5 class="card-title">Masaje Sueco</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta mollitia sequi delectus reiciendis tempora. Eius.</p>
+                            <h5 class="card-title">Masaje Esteteico</h5>
+                            <p class="card-text">Técnica específica que permite limitar la aparición de imperfecciones cutáneas como la celulitis, arrugas, retención general de líquidos o reducir su gravedad.</p>
                             <a href="turnos.html" class="btn btn-outline-dark">Pedir Turno</a>
                         </div>
                     </div>
@@ -87,38 +87,8 @@
                     <div class="card" >
                         <img class="card-img-center" src="imagenes/masajemuger.jpg" alt="Imagen">
                         <div class="card-body">
-                            <h5 class="card-title">Masaje Sueco</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta mollitia sequi delectus reiciendis tempora. Eius.</p>
-                            <a href="turnos.html" class="btn btn-outline-dark">Pedir Turno</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4 mt-4 mb-4">
-                    <div class="card" >
-                        <img class="card-img-center" src="imagenes/masajemuger.jpg" alt="Imagen">
-                        <div class="card-body">
-                            <h5 class="card-title">Masaje Sueco</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta mollitia sequi delectus reiciendis tempora. Eius.</p>
-                            <a href="turnos.html" class="btn btn-outline-dark">Pedir Turno</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4 mt-4 mb-4">
-                    <div class="card" >
-                        <img class="card-img-center" src="imagenes/masajemuger.jpg" alt="Imagen">
-                        <div class="card-body">
-                            <h5 class="card-title">Masaje Sueco</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta mollitia sequi delectus reiciendis tempora. Eius.</p>
-                            <a href="turnos.html" class="btn btn-outline-dark">Pedir Turno</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-4 mt-4 mb-4">
-                    <div class="card" >
-                        <img class="card-img-center" src="imagenes/masajemuger.jpg" alt="Imagen">
-                        <div class="card-body">
-                            <h5 class="card-title">Masaje Sueco</h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta mollitia sequi delectus reiciendis tempora. Eius.</p>
+                            <h5 class="card-title">Masaje Mecanico</h5>
+                            <p class="card-text">Uso de aparatología tales como electroestimulador, ondas de choque, tens, vibromasajes, rodillo, etc.</p>
                             <a href="turnos.html" class="btn btn-outline-dark">Pedir Turno</a>
                         </div>
                     </div>
@@ -130,21 +100,21 @@
     <footer>
         <a href="index.html" >
             <img src="imagenes/iconoMasaje.png" alt="logo" class="logo">
-            </a>
-            <nav>
-                <ul>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="turnos.html">Turnos</a></li>
-                    <li><a href="masajes.html">Masajes</a></li>
-                </ul>
-            </nav>
-            <nav>
-                <h3>
-                    <li>Dirección: asdasdd</li>
-                    <li>Telefono: asdasdd</li>
-                    <li>Mail: asdasdd</li>
-                </h3>
-            </nav>
+        </a>
+        <nav>
+            <ul>
+                <li><a href="nosotros.html">Nosotros</a></li>
+                <li><a href="turnos.html">Turnos</a></li>
+                <li><a href="masajes.html">Masajes</a></li>
+            </ul>
+        </nav>
+        <nav>
+            <ul>
+                <li>Dirección: asdasdd</li>
+                <li>Telefono: asdasdd</li>
+                <li>Mail: asdasdd</li>
+            </ul>
+        </nav>
     </footer>
 </body>
 </html>
