--- a/nosotros.html
+++ b/nosotros.html
@@ -3,13 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Nosotros</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
     <header class="header">
         <a href="index.html">
-        <img src="imagenes/iconoMasaje.png" alt="logo" class="logo">
+             <img src="imagenes/iconoMasaje.png" alt="logo" class="logo">
+        </a>
+        <nav>
+            <ul>
+                <li><a  class="botonnav" href="nosotros.html">Nosotros</a></li>
+                <li><a  class="botonnav" href="turnos.html">Turnos</a></li>
+                <li><a  class="botonnav" href="masajes.html">Masajes</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main id="cuerpo">
+        <section>
+            <h1 class="titulo">Especialista</h1>
+        </section>
+        <section>
+            <h2 class="subtitulo">Gisela Zuñiga</h2>
+        </section>
+        <section>
+            <p class="subtitulo2">Masajista licensiada especializada en masoterapia</p>
+        </section>
+        <section>
+            <h2 class="subtitulo2 inicio">
+                UBICACION
+            </h2>
+            <div>
+                <a href="https://www.google.com.ar/maps/place/Secretaria+de+Modernizaci%C3%B3n+e+Innovaci%C3%B3n/@-53.7863432,-67.6993218,17z/data=!4m14!1m7!3m6!1s0xbc4b165b9b1087c1:0xb9c8dc117165f617!2sPlaza+Almirante+Brown!8m2!3d-53.7863464!4d-67.6967469!16s%2Fg%2F1td77tyf!3m5!1s0xbc4b17b6b1d3a5e1:0xe66739e23b4056ca!8m2!3d-53.7857268!4d-67.6988432!16s%2Fg%2F11gmx0b0sj?entry=ttu"><img src="imagenes/iconoubicacion.png" class="logo2"></a>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <a href="index.html" >
+            <img src="imagenes/iconoMasaje.png" alt="logo" class="logo">
         </a>
         <nav>
             <ul>
@@ -18,30 +49,13 @@
                 <li><a href="masajes.html">Masajes</a></li>
             </ul>
         </nav>
-    </header>
-    <main>
-        <section>
-            
-        </section>
-    </main>
-    <footer>
-        <a href="index.html" >
-            <img src="imagenes/iconoMasaje.png" alt="logo" class="logo">
-            </a>
-            <nav>
-                <ul>
-                    <li><a href="nosotros.html">Nosotros</a></li>
-                    <li><a href="turnos.html">Turnos</a></li>
-                    <li><a href="masajes.html">Masajes</a></li>
-                </ul>
-            </nav>
-            <nav>
-                <h3>
-                    <li>Dirección: asdasdd</li>
-                    <li>Telefono: asdasdd</li>
-                    <li>Mail: asdasdd</li>
-                </h3>
-            </nav>
+        <nav>
+            <ul>
+                <li>Dirección: asdasdd</li>
+                <li>Telefono: asdasdd</li>
+                <li>Mail: asdasdd</li>
+            </ul>
+        </nav>
     </footer>
 </body>
 </html>
